# crd-controller.rust

./: .gitignore  Cargo.toml  Makefile  README.md
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/crd_controller/: Cargo.toml
crates/crd_controller/src/: controller.rs  lib.rs
src/: controller.rs  main.rs
